--- a/templates/disk.html
+++ b/templates/disk.html
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Utilisation des Disques</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Disk Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <style>
         body {
+            background-color: #f8f9fa;
             font-family: Arial, sans-serif;
-            margin: 20px;
+        }
+
+        .navbar,
+        .subnav {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .subnav {
+            padding: 0.5rem 1rem;
+            margin-top: -1px;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .nav-link.active {
+            border-bottom: 3px solid blue;
+            color: blue;
+        }
+
+        .container {
+            max-width: 90%;
         }
 
         canvas {
-            margin: 10px;
+            margin-top: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            height: auto;
+        }
+
+        h2 {
+            margin-top: 2rem;
         }
     </style>
 </head>
 
 <body>
-    <div id="charts"></div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Disk Management</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Disk Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/status">Status</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container" id="charts"></div>
     <script>
         fetch('/diskinfo')
         .then(response => response.json())
@@ -30,6 +85,10 @@
             const container = document.getElementById('charts');
             const filteredData = data.filter(disk => disk.total >= 20);
             filteredData.forEach((disk, index) => {
+                const title = document.createElement('h2');
+                title.textContent = `Disque: ${disk.device} - Monté sur: ${disk.mountpoint}`;
+                container.appendChild(title);
+
                 const canvas = document.createElement('canvas');
                 canvas.id = 'diskChart' + index;
                 container.appendChild(canvas);
@@ -38,11 +97,11 @@
                 const freePercentage = (disk.free / disk.total) * 100;
                 let backgroundColor;
                 if (freePercentage > 50) {
-                    backgroundColor = ['rgba(75, 192, 192, 0.7)', 'rgba(255, 99, 132, 0.7)']; // Vert et rouge
+                    backgroundColor = ['rgba(75, 192, 192, 0.7)', 'rgba(255, 99, 132, 0.7)'];
                 } else if (freePercentage > 25) {
-                    backgroundColor = ['rgba(255, 206, 86, 0.7)', 'rgba(255, 99, 132, 0.7)']; // Jaune et rouge
+                    backgroundColor = ['rgba(255, 206, 86, 0.7)', 'rgba(255, 99, 132, 0.7)'];
                 } else {
-                    backgroundColor = ['rgba(255, 99, 132, 0.7)', 'rgba(54, 162, 235, 0.7)']; // Rouge et bleu
+                    backgroundColor = ['rgba(255, 99, 132, 0.7)', 'rgba(54, 162, 235, 0.7)'];
                 }
 
                 new Chart(ctx, {
@@ -50,27 +109,24 @@
                     data: {
                         labels: ['Libre (Go)', 'Utilisé (Go)'],
                         datasets: [{
-                            label: `${disk.device} Utilisation du Disque (Go)`,
                             data: [disk.free, disk.used],
                             backgroundColor: backgroundColor,
-                            borderColor: [
-                            ],
-                            borderWidth: 0
+                            borderColor: ['rgba(255, 255, 255, 1)', 'rgba(255, 255, 255, 1)'],
+                            borderWidth: 2
                         }]
                     },
                     options: {
                         responsive: false,
-                        maintainAspectRatio: false,
-                        title: {
-                            display: true,
-                            text: 'Disque: ' + disk.device
-                        }
+                        maintainAspectRatio: false
                     }
                 });
             });
         })
         .catch(error => console.error('Error:', error));
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
