--- a/templates/disk.html
+++ b/templates/disk.html
@@ -6,50 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disk Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
     <style>
         body {
             background-color: #f8f9fa;
             font-family: Arial, sans-serif;
         }
 
-        .navbar,
-        .subnav {
+        .navbar {
             background-color: #fff;
             border-bottom: 1px solid #dee2e6;
         }
 
-        .subnav {
-            padding: 0.5rem 1rem;
-            margin-top: -1px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .nav-link.active {
-            border-bottom: 3px solid blue;
-            color: blue;
+        .card {
+            margin-top: 20px;
         }
 
         .container {
-            max-width: 90%;
-        }
-
-        canvas {
-            margin-top: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 20%;
-            height: 400px;
-        }
-
-        h2 {
-            margin-top: 2rem;
+            padding-top: 20px;
         }
     </style>
 </head>
@@ -57,7 +30,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Disk Management</a>
+            <a class="navbar-brand" href="#">Disk Management</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -65,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Disk Info</a>
@@ -77,52 +50,68 @@
             </div>
         </div>
     </nav>
-    <div class="container" id="charts"></div>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <center id="charts" class="col-md-8"></center>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         fetch('/diskinfo')
-        .then(response => response.json())
-        .then(data => {
-            const container = document.getElementById('charts');
-            const filteredData = data.filter(disk => disk.total >= 20);
-            filteredData.forEach((disk, index) => {
-                const title = document.createElement('h2');
-                title.textContent = `Disque: ${disk.device} - Monté sur: ${disk.mountpoint}`;
-                container.appendChild(title);
+            .then(response => response.json())
+            .then(data => {
+                const container = document.getElementById('charts');
+                const filteredData = data.filter(disk => disk.total >= 20);
+                filteredData.forEach((disk, index) => {
+                    const card = document.createElement('div');
+                    card.className = 'card';
 
-                const canvas = document.createElement('canvas');
-                canvas.id = 'diskChart' + index;
-                container.appendChild(canvas);
+                    const cardHeader = document.createElement('div');
+                    cardHeader.className = 'card-header';
+                    cardHeader.textContent = `Monté sur: ${disk.mountpoint}`;
+                    card.appendChild(cardHeader);
 
-                const ctx = canvas.getContext('2d');
-                const freePercentage = (disk.free / disk.total) * 100;
-                let backgroundColor;
-                if (freePercentage > 50) {
-                    backgroundColor = ['rgba(75, 192, 192, 0.7)', 'rgba(255, 99, 132, 0.7)'];
-                } else if (freePercentage > 25) {
-                    backgroundColor = ['rgba(255, 206, 86, 0.7)', 'rgba(255, 99, 132, 0.7)'];
-                } else {
-                    backgroundColor = ['rgba(255, 99, 132, 0.7)', 'rgba(54, 162, 235, 0.7)'];
-                }
+                    const cardBody = document.createElement('div');
+                    cardBody.className = 'card-body';
 
-                new Chart(ctx, {
-                    type: 'pie',
-                    data: {
-                        labels: ['Libre (Go)', 'Utilisé (Go)'],
-                        datasets: [{
-                            data: [disk.free, disk.used],
-                            backgroundColor: backgroundColor,
-                            borderColor: ['rgba(255, 255, 255, 1)', 'rgba(255, 255, 255, 1)'],
-                            borderWidth: 2
-                        }]
-                    },
-                    options: {
-                        responsive: false,
-                        maintainAspectRatio: false
+                    const canvas = document.createElement('canvas');
+                    canvas.id = 'diskChart' + index;
+                    cardBody.appendChild(canvas);
+                    card.appendChild(cardBody);
+                    container.appendChild(card);
+
+                    const ctx = canvas.getContext('2d');
+                    const freePercentage = (disk.free / disk.total) * 100;
+                    let backgroundColor;
+                    if (freePercentage > 50) {
+                        backgroundColor = ['rgba(75, 192, 192, 0.7)', 'rgba(255, 99, 132, 0.7)'];
+                    } else if (freePercentage > 25) {
+                        backgroundColor = ['rgba(255, 206, 86, 0.7)', 'rgba(255, 99, 132, 0.7)'];
+                    } else {
+                        backgroundColor = ['rgba(255, 99, 132, 0.7)', 'rgba(54, 162, 235, 0.7)'];
                     }
+
+                    new Chart(ctx, {
+                        type: 'pie',
+                        data: {
+                            labels: ['Libre (Go)', 'Utilisé (Go)'],
+                            datasets: [{
+                                data: [disk.free, disk.used],
+                                backgroundColor: backgroundColor,
+                                borderColor: ['rgba(255, 255, 255, 1)', 'rgba(255, 255, 255, 1)'],
+                                borderWidth: 2
+                            }]
+                        },
+                        options: {
+                            responsive: false,
+                            maintainAspectRatio: false
+                        }
+                    });
                 });
-            });
-        })
-        .catch(error => console.error('Error:', error));
+            })
+            .catch(error => console.error('Error:', error));
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
