--- a/templates/phred-quality.html
+++ b/templates/phred-quality.html
@@ -122,7 +122,7 @@
         <pre><code class="language-bash" id="scriptArea"></code></pre>
         <!-- <button onclick="copyToClipboard()">Copier</button> -->
         <button onclick="downloadScript()" class="btn btn-primary">Télécharger le script sur la machine</button>
-        <button id="runScriptButton" class="btn btn-success">Lancer le script sur la machine</button>
+        <button onclick="startScript()" class="btn btn-success">Lancer le script sur la machine</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
